# fyp

./: .gitignore  BACKEND_STARTUP_FIX.md  BOOKING_STATUS_WORKFLOW.md  BOOKING_SYSTEM_EXPLANATION.md  DATABASE_STRUCTURE.md  PAYMENT_INTEGRATION_COMPLETE.md  PAYMENT_SETUP.md  PAYMENT_WORKFLOW_UPDATED.md  RATING_SYSTEM_COMPLETE.md  STRIPE_KEYS_GUIDE.md  TESTING_GUIDE.md  create_db.py  glowsense.dump  implementation_plan.md  package-lock.json
GOOGLE AUTH/: README.md
backend/: AI_ASSISTANT_TROUBLESHOOTING.md  BACKUP_AND_SETUP_GUIDE.md  COMPLETE_RAG_SETUP.md  DOCKER_DATABASE_AUTO_CREATED.md  DOCKER_PGVECTOR_GUIDE.md  DOCKER_PGVECTOR_SETUP.md  Dockerfile  FINAL_STEPS.md  GIT_PUSH_GUIDE.md  HOW_TO_CREATE_BACKUP.md  HOW_TO_RUN_DATABASE_SETUP.md  IMPORTANT_VECTOR_NOTE.md  INSTALL_OLLAMA_WINDOWS.md  NEXT_STEPS_AFTER_BACKUP.md  OLLAMA_ALREADY_RUNNING.md  PGADMIN_BACKUP_GUIDE.md  PGVECTOR_WINDOWS_INSTALL.md  PROVIDER_LEVEL_SYSTEM.md  QUICK_DOCKER_SETUP.md  RAG_INTEGRATION_COMPLETE.md  RAG_MODULE_README.md  RAG_NEXT_STEPS.md  RAG_QUICK_START.md  RAG_SETUP_INSTRUCTIONS.md  RAG_SYSTEM_SUMMARY.md  RATING_SYSTEM_README.md  README.md  RESTORE_TROUBLESHOOTING.md  SETUP_COMMANDS.md  SETUP_COMPLETE.md  STANDBY_IMPLEMENTATION_COMPLETE.md  STANDBY_SYSTEM_SETUP.md  STOP_POSTGRESQL_SOLUTIONS.md  WHERE_TO_RUN_OLLAMA.md  add_created_at.py  add_profile_photo.py  add_timezone_columns.py  alter_db.py  (+36 more)
practic/: pyproject.toml
practic/project1/: pyproject.toml
practic/project1/src/project1/: agent_config.py  db.py  main.py  models.py  schemas.py  services.py
practic/src/practic/: __init__.py
(+91 files in other folders)
