[project]
name = "project1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "openai-agents>=0.2.2",
]

[project.scripts]
project1 = "project1:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
